[build-system]
requires = ["setuptools>=42", "wheel", "cmake>=3.16", "pybind11>=2.8"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "pp* *-musllinux*"
test-command = "python -c \"import dicomsdl, pathlib; d = dicomsdl.DicomFile.attach(str(pathlib.Path('.').resolve())); print(d.path)\""
